# AudioRecorder

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/audiorecorder/: MainActivity.kt
app/src/main/java/com/example/audiorecorder/lib/: AudioSineWaveGen.java  InternalPointerMarker.java  JNIReachabilityFence.java
audio_lib/: Cargo.toml  build.rs
audio_lib/.cargo/: config.toml
audio_lib/src/: audio_glue.rs  audio_glue.rs.in  lib.rs
gradle/wrapper/: gradle-wrapper.properties
