[package]
name = "audio_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "android_lib"
crate-type = ["cdylib"]

[dependencies]
rifgen = "0.1"
jni-sys = "0.3"
log = "0.4"
android_logger = "0.11"
oboe = { version = "0.4.6", features = ["fetch-prebuilt"] }
atomic_float = "0.1.0"

[build-dependencies]
flapigen = "0.6.0-pre9"
rifgen = "0.1.61"
